feat(apify): integrate Apify media extraction functionality   @nafisaa11 (#14)
* feat(apify): integrate Apify media extraction functionality

- Added Apify configuration options to the internal config.
- Implemented Apify repository interface.
- Created media extraction DTOs and handlers for triggering media extraction and processing webhooks.
- Developed a worker for handling media extraction jobs using River.

* feat(apify): implement video repository and service for managing video metadata

* integrate Modal ASR for video transcription and enhance video repository

* fixing migration file naming

* fix formatting from fmt check

* restructure API configs, move HTTPClient, and enforce service layer DB access in worker
