# internal/db/models.go
@@ -68,3 +68,21 @@ type User struct {
 	Email     string
 	CreatedAt pgtype.Timestamp
 }
+
+type Video struct {
+	ID                uuid.UUID
+	VideoUrl          string
+	AuthorUsername    string
+	AuthorProfileUrl  string
+	Caption           pgtype.Text
+	PlayCount         pgtype.Int8
+	LikeCount         pgtype.Int8
+	ThumbnailUrl      string
+	LocationCreated   pgtype.Text
+	VideoCreatedAt    pgtype.Timestamptz
+	TranscriptionText pgtype.Text
+	Hashtags          []string
+	VideoType         string
+	CreatedAt         time.Time
+	UpdatedAt         time.Time
+}
